--- a/common.css
+++ b/common.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 200px 0 100px 0;
+  margin: 100px 0;
 }
 
 .units {
@@ -65,7 +65,7 @@ body {
 
 .section {
   max-width: 1300px;
-  margin: 60px auto 0 auto;
+  margin: 0 auto;
   padding: 0;
 }
 
