--- a/common.css
+++ b/common.css
@@ -55,7 +55,7 @@ body {
 
 .back {
   display: inline-block;
-  margin: 50px;
+  margin: 0 50px 50px;
   padding: 0;
   font-size: 30px;
   font-weight: 500;
@@ -81,8 +81,8 @@ body {
 }
 
 .item {
-  width: 400px;
-  height: 200px;
+  width: 300px;
+  height: 150px;
 }
 
 .wrap {
